--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
+		"date-fns": "^3.6.0",
 		"dotenv": "^16.4.5",
 		"express": "^4.20.0",
 		"http-status-codes": "^2.3.0",
