--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,6 +3,7 @@
 		"target": "es6",
 		"module": "CommonJS",
 		"moduleResolution": "node",
+		"resolveJsonModule": true,
 		"strict": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
