--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
 	"description": "",
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.6",
+		"@types/cookie-parser": "^1.4.7",
 		"@types/cors": "^2.8.17",
 		"@types/dotenv": "^6.1.1",
 		"@types/express": "^4.17.21",
@@ -23,11 +24,13 @@
 	},
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"date-fns": "^3.6.0",
 		"dotenv": "^16.4.5",
 		"express": "^4.20.0",
 		"http-status-codes": "^2.3.0",
+		"mongoose": "^8.6.2",
 		"uuid": "^10.0.0"
 	}
 }
