--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
 		"@types/dotenv": "^6.1.1",
 		"@types/express": "^4.17.21",
 		"@types/http-status-codes": "^1.2.0",
+		"@types/jsonwebtoken": "^9.0.6",
 		"@types/node": "^22.5.4",
 		"@types/uuid": "^10.0.0",
 		"ts-node-dev": "^2.0.0",
@@ -30,6 +31,7 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.20.0",
 		"http-status-codes": "^2.3.0",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.6.2",
 		"uuid": "^10.0.0"
 	}
